--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
             "eject": "react-scripts eject"
       },
       "dependencies": {
+            "@googlemaps/js-api-loader": "^2.0.1",
             "autoprefixer": "^10.0.0",
             "date-fns": "^4.1.0",
             "framer-motion": "latest",
