--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,16 +6,17 @@
             "eject": "react-scripts eject"
       },
       "dependencies": {
-            "@googlemaps/js-api-loader": "^2.0.1",
             "autoprefixer": "^10.0.0",
             "date-fns": "^4.1.0",
             "framer-motion": "latest",
+            "leaflet": "^1.9.4",
             "lucide-react": "latest",
             "node.js": "^0.0.1-security",
             "postcss": "^8",
             "react": "^18.0.0",
             "react-big-calendar": "^1.19.4",
             "react-dom": "^18.0.0",
+            "react-leaflet": "^4.2.1",
             "react-router-dom": "latest",
             "react-scripts": "^5.0.0",
             "tailwind-merge": "^2.4.0",
